# caffeine-overflow

./: .gitignore  README.md
faq-mcp/: pyproject.toml
faq-mcp/docs/: FAQ.md  faq_chunks.json  handle_raw_data.py
faq-mcp/src/: main.py
faq-mcp/src/rag/: document_loader.py  example_rag.py  load_doc.py  tidb_vector_save.py  tidb_vector_util.py  util_download_nltk.py
faq-mcp/src/rag/web_ui/: run.py
knowledge-base-mcp/: README.md
knowledge-base-mcp/src/: main.py
knowledge-base-mcp/src/rag/: doc_retrieval.py  docker-compose.yml  tidb_vector_util.py  web_app.py
knowledge-base-mcp/src/rag/tidb-vector-ui/: Dockerfile  README.md
knowledge-base-mcp/src/rag/tidb-vector-ui/src/app/api/ping_tidb/: route.ts
knowledge-base-mcp/src/rag/tidb-vector-ui/src/app/api/test_retrieval/: route.ts
knowledge-base-mcp/src/rag/tidb-vector-ui/src/app/api/upload_documents/: route.ts
knowledge-base-mcp/src/rag/web_ui/: README.md  app.py
knowledge-base-mcp/src/rag/web_ui/static/: style.css
knowledge-base-mcp/src/rag/web_ui/templates/: index.html
knowledge-base-mcp/src/vector_search/: Dockerfile  doc_retrieval.py  docker-compose.yml
knowledge-base-mcp/src/vector_search/tidb_vector_ui/: Dockerfile
knowledge-base-mcp/src/vector_search/tidb_vector_ui/src/components/sections/: DatabaseConnectionCard.tsx  DocumentProcessingCard.tsx  RetrievalTestingCard.tsx
lark-bot/: README.md  go.mod  go.sum  main.py  pyproject.toml
lark-bot/cmd/server/: main.go
lark-bot/pkg/events/handler/: root.go
tidb-pr-mcp/src/: main.py
(+3 files in other folders)
