[project]
name = "faq-mcp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "langchain>=0.3.22",
    "langchain-community>=0.3.20",
    "langchain-google-genai>=2.1.2",
    "langchain-openai>=0.3.11",
    "mcp[cli]>=1.6.0",
    "mysqlclient>=2.2.7",
    "pymysql>=1.1.1",
    "sentence-transformers>=4.0.1",
    "tidb-vector>=0.0.14",
]
